--- a/index.html
+++ b/index.html
@@ -34,31 +34,34 @@
         <div class="content-top">
             <div class="info"> Some random information</div>
             <div class="content-top-bottom">
-                <div>
+                <div class="ima">
                     <img id="i1" src="./colors_and_stuff.png" alt="image1">
-                    <p>this is some subtext under an illustration or image</p>
+                    <div class="subtxt">this is some subtext under an illustration or image</div>
                 </div>
-                <div>
+                <div class="ima">
                     <img id="i2" src="./colors_and_stuff.png" alt="image2">
-                    <p>this is some subtext under an illustration or image</p>
+                    <div class="subtxt">this is some subtext under an illustration or image</div>
                 </div>
-                <div>
+                <div class="ima">
                     <img id="i3" src="./colors_and_stuff.png" alt="image3">
-                    <p>this is some subtext under an illustration or image</p>
+                    <div class="subtxt">this is some subtext under an illustration or image</div>
                 </div>
-                <div>
+                <div class="ima">
                     <img id="i4" src="./colors_and_stuff.png" alt="image4">
-                    <p>this is some subtext under an illustration or image</p>
+                    <div class="subtxt">this is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div>
         <div class="content-middle">
-            <p>This is an inspiring quote, or a testimonial from customer. 
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from customer. 
                 Maybe it's just filling up space, or maybe people will actually read it.
                 Who knows? All i know is that it looks nice.
                 
-            </p>
-            <div class="author">-Thor, God of Thunder</div>
+            </div>
+            <div class="author">
+                -Thor, God of Thunder
+            </div>
         </div>
         <div class="content-bottom">
             <div class="content-bottom-left">
